--- a/icon/manifest.json
+++ b/icon/manifest.json
@@ -1,11 +1,10 @@
 {
   "name": "WSSMS",
   "short_name": "WSSMS",
-  "start_url": "/",
+  "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#ffffff",
-  "description": "Woodstock School Student Management System",
   "icons": [
     {
       "src": "/icon-192.png",
@@ -16,20 +15,6 @@
       "src": "/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
-    },
-    {
-      "src": "/icon-192-maskable.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable"
-    },
-    {
-      "src": "/icon-512-maskable.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
     }
-  ],
-  "orientation": "portrait-primary",
-  "scope": "/"
+  ]
 }
