--- a/src/integrations/firebase/src/services/.env
+++ b/src/integrations/firebase/src/services/.env
@@ -1,6 +1,6 @@
-VITE_FIREBASE_API_KEY=your_api_key
-VITE_FIREBASE_AUTH_DOMAIN=your_auth_domain
-VITE_FIREBASE_PROJECT_ID=your_project_id
-VITE_FIREBASE_STORAGE_BUCKET=your_storage_bucket
-VITE_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id
-VITE_FIREBASE_APP_ID=your_app_id
+VITE_FIREBASE_API_KEY=AIzaSyAg0Im0xRga3b_mN2NiXItQ0Vx_pWt7Ms4
+VITE_FIREBASE_AUTH_DOMAIN=wssms-cc2ec.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=wssms-cc2ec
+VITE_FIREBASE_STORAGE_BUCKET=wssms-cc2ec.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=501889851311
+VITE_FIREBASE_APP_ID=1:501889851311:web:9b99ebca446864e389995a
